@@ -144,6 +144,11 @@
 			</li>
 		</ul>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<ul>
+			<li><span class="label label-info">Modified</span> Upgraded ELK version from 0.4.1 to 0.5.0, see the 
+				<a href="https://projects.eclipse.org/projects/modeling.elk/releases/0.5.0">ELK documentation</a> for the list of changes in that version.
+			</li>
+		</ul>
 		<h4 id="Changesinorg.eclipse.sirius">Changes in  
 			<code>org.eclipse.sirius</code>
 		</h4>
