@@ -1,0 +1,12 @@
+target "elk-0.5"
+
+with source, requirements
+
+location ELK-0.5 "http://download.eclipse.org/elk/updates/releases/0.5.0/" {
+    org.eclipse.elk.feature.feature.group lazy
+    org.eclipse.elk.feature.source.feature.group lazy
+    org.eclipse.elk.algorithms.feature.feature.group lazy
+    org.eclipse.elk.algorithms.feature.source.feature.group lazy
+    org.eclipse.elk.graphviz.feature.feature.group lazy
+    org.eclipse.elk.graphviz.feature.source.feature.group lazy
+}
