@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?pde?>
 <!-- generated with https://github.com/eclipse-cbi/targetplatform-dsl -->
-<target name="sirius_photon" sequenceNumber="1561532385">
+<target name="sirius_photon" sequenceNumber="1567425240">
   <locations>
     <location includeMode="planner" includeAllPlatforms="false" includeSource="true" includeConfigurePhase="false" type="InstallableUnit">
       <unit id="org.apache.log4j" version="0.0.0"/>
@@ -61,7 +61,7 @@
       <unit id="org.eclipse.elk.algorithms.feature.source.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.graphviz.feature.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.graphviz.feature.source.feature.group" version="0.0.0"/>
-      <repository id="ELK-0.4" location="http://download.eclipse.org/elk/updates/releases/0.4.1/"/>
+      <repository id="ELK-0.5" location="http://download.eclipse.org/elk/updates/releases/0.5.0/"/>
     </location>
     <location includeMode="planner" includeAllPlatforms="false" includeSource="true" includeConfigurePhase="false" type="InstallableUnit">
       <unit id="org.eclipse.jetty.io" version="9.4.10.v20180503"/>
