@@ -16,6 +16,8 @@ h3. Specifier-Visible Changes
 
 h3. Developer-Visible Changes
 
+* <span class="label label-info">Modified</span> Upgraded ELK version from 0.4.1 to 0.5.0, see the "ELK documentation":https://projects.eclipse.org/projects/modeling.elk/releases/0.5.0 for the list of changes in that version.
+
 h4. Changes in  @org.eclipse.sirius@
 
 * <span class="label label-success">Added</span> A new EAttribute @changeId@ has been added in @DRepresentationDescriptor@. It allows to know if two @DRepresentation@(each associated to one DRepresentationDescriptor) are the same and have the exact same content. It can be useful to not load the representation if not needed. The methods @updateChangeId(DRepresentationDescriptor)@ and @areRepresentationIdentical(DRepresentationDescriptor, DRepresentationDescriptor)@ have been added in @org.eclipse.sirius.business.api.helper.RepresentationHelper@ to get change id information and to update it if needed in DRepresentationDescriptor.
